fix: Tune UI to avoid jump during init loading and dragging (#390)

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -28,6 +28,10 @@ body {
   height: calc(100vh - 3rem);
 }
 
+.window {
+  padding: 0 1px 42px 1px;
+}
+
 .toolbar {
   opacity: 0.4;
 }
